movenet, blazepose updated

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
   </head>  
   <body>
-    <h1>Multiple object detection using pre trained model in TensorFlow.js</h1>
+    <h1>Pose estimation in TensorFlow.js</h1>
 
     <p>Wait for the model to load before clicking the button to enable the webcam - at which point it will become visible to use.</p>
     
     <section id="demos" class="invisible">
 
-      <p>Hold some objects up close to your webcam to get a real-time classification! When ready click "enable webcam" below and accept access to the webcam when the browser asks (check the top left of your window)</p>
+      <p>When ready click "enable webcam" below and accept access to the webcam when the browser asks (check the top left of your window)</p>
       
       <div id="liveView" class="camView">
         <button id="webcamButton">Enable Webcam</button>
@@ -21,14 +21,9 @@
       </div>
     </section>
 
-    <!-- Require the peer dependencies of pose-detection. -->c
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter"></script>
-
-    <!-- You must explicitly require a TF.js backend if you're not using the TF.js union bundle. -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
-    <!-- Alternatively you can use the WASM backend: <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script> -->
-
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/pose-detection"></script>
 
     <!-- Import TensorFlow.js library -->
